
cmake_minimum_required (VERSION 3.0)

set (TARGET mysqlhs)
project (${TARGET})

aux_source_directory (. Source_DIRECTORIES)
add_executable (${TARGET} ${Source_DIRECTORIES})

include_directories (/usr/include /usr/local/include)

find_package (Boost 1.55.0 COMPONENTS system)
find_library (PThread_LIBRARIES NAMES pthread)

if (CMAKE_CXX_COMPILER_ID MATCHES Clang)
	set (CMAKE_COMPILER_IS_CLANGCXX 1)
endif()

if (CMAKE_COMPILER_IS_GNUCXX OR CMAKE_COMPILER_IS_CLANGCXX)
	set (CMAKE_CXX_FLAGS "-std=c++11 -Wall -g -fexceptions -O2 -DNDEBUG")
endif()

target_link_libraries (${TARGET} ${Boost_LIBRARIES})
target_link_libraries (${TARGET} ${PThread_LIBRARIES})

